ci: add ci-sonarcloud configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=node-test
-sonar.projectName=node-test
+sonar.projectKey=rogeriocassares_fullcycle-sonarcloud-nodejs
+sonar.organization=rogeriocassares
 
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
