--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,19 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Use Node.js 18.6
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
-
-      - name: Install dependencies
       - run: npm ci
-
-      - name: Build app --if-present
-      - run: npm run build --if-present
-
-      - name: Run tests
       - run: npm run test
 
       - name: SonarCloud Scan
